RetailDevGit/src/objects/ARM_Survey__c.object
<CustomObject>
    <description>Appirio Retail Management (ARM) Object</description>
    <fields>
        <fullName>Account_Segmentation__c</fullName>
        <label>Account Segmentation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>ARM_Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Multicultural</fullName>
                </value>
                <value>
                    <fullName>High-end Champagne</fullName>
                </value>
                <value>
                    <fullName>NiteClub</fullName>
                </value>
                <value>
                    <fullName>VONS - 1</fullName>
                </value>
                <value>
                    <fullName>VONS - 2</fullName>
                </value>
                <value>
                    <fullName>VONS - 3</fullName>
                </value>
                <value>
                    <fullName>VONS - 4</fullName>
                </value>
                <value>
                    <fullName>VONS - 5</fullName>
                </value>
                <value>
                    <fullName>SAFEWAY - 1</fullName>
                </value>
                <value>
                    <fullName>SAFEWAY - 2</fullName>
                </value>
                <value>
                    <fullName>SAFEWAY - 3</fullName>
                </value>
                <value>
                    <fullName>SAFEWAY - 4</fullName>
                </value>
                <value>
                    <fullName>SAFEWAY - 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enable_Edit_on_Review_Screen__c</fullName>
        <defaultValue>true</defaultValue>
        <description>if unchecked, then the &quot;edit&quot; button will be disabled or removed from the mobile app review screen</description>
        <inlineHelpText>if unchecked, then the &quot;edit&quot; button will be disabled or removed from the mobile app review screen</inlineHelpText>
        <label>Enable Edit on Review Screen?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Survey end date</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Survey_ID__c</fullName>
        <description>ID from legacy system used to migrate surveys from one org to another. E.g. sk2 to production.</description>
        <externalId>true</externalId>
        <inlineHelpText>ID from legacy system used to migrate surveys from one org to another. E.g. sk2 to production.</inlineHelpText>
        <label>External Survey ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The very first question in the survey.  Note that this is NOT relevant for product-based surveys that always start with the barcode scan.</description>
        <inlineHelpText>The very first question in the survey.  Note that this is NOT relevant for product-based surveys that always start with the barcode scan.</inlineHelpText>
        <label>First Question</label>
        <referenceTo>ARM_Question__c</referenceTo>
        <relationshipName>First_Question</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grading_Scale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Will this survey use a Grading Scale?  If this is populated, we assume the related questions&apos; answers will be json objects that include the weight for each answer.</description>
        <inlineHelpText>Will this survey use a Grading Scale?  If this is populated, we assume the related questions&apos; answers will be json objects that include the weight for each answer.</inlineHelpText>
        <label>Grading Scale</label>
        <referenceTo>ARM_Grading_Scale__c</referenceTo>
        <relationshipName>ARM_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsParent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag if the survey record is a parent survey with chapter-surveys</description>
        <inlineHelpText>Flag if the survey record is a parent survey with chapter-surveys</inlineHelpText>
        <label>IsParent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Group</label>
        <referenceTo>ARM_Marketing_Group__c</referenceTo>
        <relationshipName>ARM_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>National_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>National Account</label>
        <referenceTo>ARM_National_Account_Group__c</referenceTo>
        <relationshipName>ARM_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>National_Goal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if this is a national goal; Unchecked if local goal</description>
        <inlineHelpText>Checked if this is a national goal; Unchecked if local goal</inlineHelpText>
        <label>National Goal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent object link for child chapter-surveys</description>
        <inlineHelpText>Parent object link for child chapter-surveys</inlineHelpText>
        <label>Parent Survey</label>
        <referenceTo>ARM_Survey__c</referenceTo>
        <relationshipName>ARM_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>OFF PREMISE</fullName>
                </value>
                <value>
                    <fullName>ON PREMISE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Survey start date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_channel__c</fullName>
        <label>Sub-channel</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>Adult Entertainment</fullName>
                </value>
                <value>
                    <fullName>Airline</fullName>
                </value>
                <value>
                    <fullName>Amusement NA</fullName>
                </value>
                <value>
                    <fullName>Apparel/Accessories</fullName>
                </value>
                <value>
                    <fullName>Athletic Store</fullName>
                </value>
                <value>
                    <fullName>Auto Aftermarket</fullName>
                </value>
                <value>
                    <fullName>Auto Repair Service</fullName>
                </value>
                <value>
                    <fullName>Banquet Halls</fullName>
                </value>
                <value>
                    <fullName>Bar/Nightclub</fullName>
                </value>
                <value>
                    <fullName>Beauty Salon/Barber Shop</fullName>
                </value>
                <value>
                    <fullName>Beer Specialty Store</fullName>
                </value>
                <value>
                    <fullName>Book Shop</fullName>
                </value>
                <value>
                    <fullName>Campground</fullName>
                </value>
                <value>
                    <fullName>Car Wash</fullName>
                </value>
                <value>
                    <fullName>Cards/Gifts/Books</fullName>
                </value>
                <value>
                    <fullName>Casino</fullName>
                </value>
                <value>
                    <fullName>Casual</fullName>
                </value>
                <value>
                    <fullName>Casual Nightclub</fullName>
                </value>
                <value>
                    <fullName>Caterer</fullName>
                </value>
                <value>
                    <fullName>Client Internal</fullName>
                </value>
                <value>
                    <fullName>Concessionaire NA</fullName>
                </value>
                <value>
                    <fullName>Consumer Electronics</fullName>
                </value>
                <value>
                    <fullName>Conventional</fullName>
                </value>
                <value>
                    <fullName>Craft/Hobby</fullName>
                </value>
                <value>
                    <fullName>Cruise/ Yacht</fullName>
                </value>
                <value>
                    <fullName>CS Gas Only</fullName>
                </value>
                <value>
                    <fullName>CS Military Shopette</fullName>
                </value>
                <value>
                    <fullName>Deli</fullName>
                </value>
                <value>
                    <fullName>Department Store</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Type_Editable__c</fullName>
        <description>Product surveys have a barcode scan and can loop through and answer questions about many products; Non-product surveys do NOT have a barcode scan.</description>
        <inlineHelpText>Product surveys have a barcode scan and can loop through and answer questions about many products; Non-product surveys do NOT have a barcode scan.</inlineHelpText>
        <label>Survey Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scan</fullName>
                </value>
                <value>
                    <fullName>Non Scan</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Type__c</fullName>
        <description>Product surveys have a barcode scan and can loop through and answer questions about many products; Non-product surveys do NOT have a barcode scan.</description>
        <inlineHelpText>Product surveys have a barcode scan and can loop through and answer questions about many products; Non-product surveys do NOT have a barcode scan.</inlineHelpText>
        <label>Survey Type - Orig</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDLinx_Acct_Level_E__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TDLinx Acct Level E</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>ARM_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Possible_Score_Rollup__c</fullName>
        <description>Rollup SUM of maxScore of all questions</description>
        <inlineHelpText>Rollup SUM of maxScore of all questions</inlineHelpText>
        <label>Total Possible Score Rollup</label>
        <summarizedField>ARM_Question__c.Max_Score__c</summarizedField>
        <summaryForeignKey>ARM_Question__c.Survey__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Possible_Score__c</fullName>
        <description>Rollup of all question maxScores minus manual adjustments</description>
        <formula>Total_Possible_Score_Rollup__c -  Total_Possible_Score_manual_adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Rollup of all question maxScores minus manual adjustments</inlineHelpText>
        <label>Total Possible Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Possible_Score_manual_adjustment__c</fullName>
        <description>Use this field for a manual adjustment to subtract some values from the automatic rollup total score.  This is relevant when you have dependent questions that are mutually exclusive from their parent question.</description>
        <inlineHelpText>Use this field for a manual adjustment to subtract some values from the automatic rollup total score.  This is relevant when you have dependent questions that are mutually exclusive from their parent question.</inlineHelpText>
        <label>Total Possible Score - manual adjustment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trade_Channel__c</fullName>
        <label>Trade Channel</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>Bar/Nightclub</fullName>
                </value>
                <value>
                    <fullName>Category Killer</fullName>
                </value>
                <value>
                    <fullName>Caterer</fullName>
                </value>
                <value>
                    <fullName>Cigarette Outlet</fullName>
                </value>
                <value>
                    <fullName>Convenience Store</fullName>
                </value>
                <value>
                    <fullName>Dining</fullName>
                </value>
                <value>
                    <fullName>Drug</fullName>
                </value>
                <value>
                    <fullName>Grocery</fullName>
                </value>
                <value>
                    <fullName>Liquor</fullName>
                </value>
                <value>
                    <fullName>Lodging</fullName>
                </value>
                <value>
                    <fullName>Mass Merchandiser</fullName>
                </value>
                <value>
                    <fullName>Military</fullName>
                </value>
                <value>
                    <fullName>Other Off Premise</fullName>
                </value>
                <value>
                    <fullName>Other On-Premise</fullName>
                </value>
                <value>
                    <fullName>Recreation</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Voluntary Wholesaler</fullName>
                </value>
                <value>
                    <fullName>Wholesale Club</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Universal_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if a survey should be a default survey (available for offline) and also active.  Unchecking the box will make this survey NOT display in the DD Survey mobile app.</description>
        <inlineHelpText>Check this box if a survey should be a default survey (available for offline) and also active.  Unchecking the box will make this survey NOT display in the DD Survey mobile app.</inlineHelpText>
        <label>Universal Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_Codes__c</fullName>
        <description>Comma-delimited zip codes for which this survey is relevant.</description>
        <inlineHelpText>Comma-delimited zip codes for which this survey is relevant.</inlineHelpText>
        <label>Zip Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Assessment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Portal_Admins</fullName>
        <booleanFilter>1 or 2 or 3 or 4 or 5 or 6</booleanFilter>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Universal_Survey__c</columns>
        <columns>State__c</columns>
        <columns>Sector__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Parent_Survey__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Pete</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Zaker</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Jason</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Bazin</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Jason Bazin</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Pete Zaker</value>
        </filters>
        <label>Portal Admins</label>
    </listViews>
    <listViews>
        <fullName>Todays_results</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Universal_Survey__c</columns>
        <columns>IsParent__c</columns>
        <columns>Survey_Type__c</columns>
        <columns>State__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_channel__c</columns>
        <columns>Sector__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Trade_Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>TODAYs Surveys</label>
    </listViews>
    <listViews>
        <fullName>april2015</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Universal_Survey__c</columns>
        <columns>State__c</columns>
        <columns>Sector__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Parent_Survey__c</columns>
        <columns>Grading_Scale__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>End_Date__c</field>
            <operation>lessThan</operation>
            <value>7/1/2015</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>greaterThan</operation>
            <value>2/28/2015</value>
        </filters>
        <label>Mar-Apr-May 2015 surveys</label>
    </listViews>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ARM_Survey_End_date_gr_than_start_date</fullName>
        <active>true</active>
        <description>The end date must be greater than the start date.</description>
        <errorConditionFormula>End_Date__c &lt;  Start_Date__c</errorConditionFormula>
        <errorMessage>The end date must be later than the start date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ARM_Survey_name_can_only_be_30_chars</fullName>
        <active>true</active>
        <description>only 30 characters fit on the app survey screen (portrait mode on iPhone)</description>
        <errorConditionFormula>LEN( Name ) &gt; 30</errorConditionFormula>
        <errorMessage>The Survey name can only be 30 characters because of the limited width of the screen on a phone.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ARM_Survey_zip_no_spaces</fullName>
        <active>true</active>
        <description>Zip code can NOT have spaces</description>
        <errorConditionFormula>CONTAINS( Zip_Codes__c , &quot; &quot;)</errorConditionFormula>
        <errorMessage>Zip codes cannot have spaces.  Please us a comma delimiter to separate multiple zip codes</errorMessage>
    </validationRules>
</CustomObject>